Simplified default card

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/ProjectList.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/ProjectList.razor
@@ -115,7 +115,7 @@
     }
     else
     {
-        <SEmptyPlaceholder Height="100%" Width="100%"></SEmptyPlaceholder>
+        <SEmptyPlaceholder />
     }
 </div>
 
