--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Server/Pages/_Layout.cshtml
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Server/Pages/_Layout.cshtml
@@ -27,6 +27,8 @@
     <script src="_content/BlazorComponent/js/blazor-component.js"></script>
     <script src="_content/Masa.Stack.Components/js/components.js"></script>
     <script src="https://cdn.masastack.com/npm/echarts/5.1.1/echarts.min.js"></script>
+    <script src="_content/Masa.Stack.Components/js/oss/aliyun-oss-sdk.min.js"></script>
+    <script src="_content/Masa.Stack.Components/js/oss/upload.js"></script>
     <script>
         window.PreventTab = function (element) {
             element.onkeydown = function (e) {
